# ufc-downloader

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-image.yml
tests/: test_importer.py
ufc_downloader/: cli.py  importer.py  indexer.py
