[tool.poetry]
name = "ufc-downloader"
version = "0.1.0"
description = "Tools for downloading and importing UFC events into Plex."
authors = ["Potato Motato <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
click = "^8.1.7"

[tool.poetry.scripts]
ufc_downloader = "ufc_downloader.cli:cli"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
